Move code from carbon-identity PR  https://github.com/wso2/carbon-identity/pull/1712

--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
         <module>components/org.wso2.carbon.identity.oauth.ui</module>
         <module>components/org.wso2.carbon.identity.oauth.stub</module>
         <module>components/org.wso2.carbon.identity.oidc.session</module>
-
+        <module>components/org.wso2.carbon.identity.oauth.dcr</module>
         <module>features/org.wso2.carbon.identity.oauth.common.feature</module>
         <module>features/org.wso2.carbon.identity.oauth.feature</module>
         <module>features/org.wso2.carbon.identity.oauth.server.feature</module>
