--- a/components/org.wso2.carbon.identity.oidc.session/pom.xml
+++ b/components/org.wso2.carbon.identity.oidc.session/pom.xml
@@ -125,7 +125,8 @@
                             version="${carbon.identity.package.import.version.range}",
                             org.wso2.carbon.identity.oauth2;
                             version="${carbon.identity.package.import.version.range}",
-
+                            org.wso2.carbon.identity.oauth2.util;
+                            version="${carbon.identity.package.import.version.range}",
                             org.wso2.carbon.utils.*; version="${carbon.kernel.package.import.version.range}",
 
                         </Import-Package>
