--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,71 @@
         <tag>HEAD</tag>
     </scm>
 
+    <dependencyManagement>
+        <dependencies>
+        <dependency>
+            <groupId>com.google.gdata.wso2</groupId>
+            <artifactId>gdata-core</artifactId>
+            <version>${gdata-core.wso2.version}</version>
+        </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.org.apache.oltu.oauth2</groupId>
+                <artifactId>oltu</artifactId>
+                <version>${oltu.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.com.github.dblock.waffle</groupId>
+                <artifactId>waffle-jna</artifactId>
+                <version>${waffle-jna.wso2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.com.nimbusds</groupId>
+                <artifactId>nimbus-jose-jwt</artifactId>
+                <version>${nimbusds.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.minidev</groupId>
+                <artifactId>json-smart</artifactId>
+                <version>${json-smart.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity</groupId>
+                <artifactId>org.wso2.carbon.identity.provider</artifactId>
+                <version>${identity.inbount.openid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.cxf.wso2</groupId>
+                <artifactId>cxf-bundle</artifactId>
+                <version>${cxf-bundle.wso2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.thetransactioncompany.wso2</groupId>
+                <artifactId>cors-filter</artifactId>
+                <version>${thetransactioncompany.cors-filter.wso2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.json.wso2</groupId>
+                <artifactId>json</artifactId>
+                <version>${json.wso2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava.wso2</groupId>
+                <artifactId>guava</artifactId>
+                <version>${google.guava.wso2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.orbit.org.opensaml</groupId>
+                <artifactId>opensaml</artifactId>
+                <version>${opensaml2.wso2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.thetransactioncompany.wso2</groupId>
+                <artifactId>java-property-utils</artifactId>
+                <version>${thetransactioncompany.utils.wso2.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <repositories>
         <repository>
             <id>wso2-nexus</id>
@@ -127,6 +192,30 @@
         <module>features/org.wso2.carbon.identity.oauth.server.feature</module>
         <module>features/org.wso2.carbon.identity.oauth.ui.feature</module>
     </modules>
+
+    <properties>
+        <gdata-core.wso2.version>1.47.0.wso2v1</gdata-core.wso2.version>
+        <gdata-core.imp.pkg.version.range>[1.47.0.wso2v1,2.0.0)</gdata-core.imp.pkg.version.range>
+        <oltu.version>1.0.0.wso2v3</oltu.version>
+        <org.apache.oltu.oauth2.client.version>1.0.0</org.apache.oltu.oauth2.client.version>
+        <oltu.package.import.version.range>[1.0.0, 2.0.0)</oltu.package.import.version.range>
+        <waffle.imp.pkg.version.range>[1.6.wso2v4, 2.0)</waffle.imp.pkg.version.range>
+        <waffle-jna.wso2.version>1.6.wso2v4</waffle-jna.wso2.version>
+        <waffle-jna.imp.pkg.version.range>[1.6.wso2v1, 2.0)</waffle-jna.imp.pkg.version.range>
+        <nimbusds.version>2.26.1.wso2v3</nimbusds.version>
+        <nimbusds.osgi.version.range>[2.26.1,3.0.0)</nimbusds.osgi.version.range>
+        <json-smart.version>1.3</json-smart.version>
+        <identity.inbount.openid.version>5.0.9-SNAPSHOT</identity.inbount.openid.version>
+        <cxf-bundle.wso2.version>2.6.1.wso2v2</cxf-bundle.wso2.version>
+        <thetransactioncompany.cors-filter.wso2.version>1.7.0.wso2v1</thetransactioncompany.cors-filter.wso2.version>
+        <thetransactioncompany.utils.wso2.version>1.9.0.wso2v1</thetransactioncompany.utils.wso2.version>
+        <json.wso2.version>3.0.0.wso2v1</json.wso2.version>
+        <json.wso2.version.range>[3.0.0.wso2v1, 4.0.0)</json.wso2.version.range>
+        <google.guava.wso2.version>12.0.0.wso2v1</google.guava.wso2.version>
+        <opensaml.version>2.6.4</opensaml.version>
+        <opensaml2.wso2.version>2.6.4.wso2v2</opensaml2.wso2.version>
+        <opensaml2.wso2.osgi.version.range>[2.6.0,3.0.0)</opensaml2.wso2.osgi.version.range>
+    </properties>
 
 </project>
 
