--- a/components/org.wso2.carbon.identity.oauth.endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/org.wso2.carbon.identity.oauth.endpoint/src/main/webapp/WEB-INF/web.xml
@@ -80,6 +80,7 @@
         <cookie-config>
             <secure>true</secure>
         </cookie-config>
+        <session-timeout>60</session-timeout>
     </session-config>
 
 </web-app>
