--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
                 <artifactId>org.wso2.carbon.identity.oauth.ui</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.codehaus.jettison</groupId>
+                <artifactId>jettison</artifactId>
+                <version>${org.codehaus.jettison.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -249,6 +254,7 @@
         <opensaml.version>2.6.4</opensaml.version>
         <opensaml2.wso2.version>2.6.4.wso2v2</opensaml2.wso2.version>
         <opensaml2.wso2.osgi.version.range>[2.6.0,3.0.0)</opensaml2.wso2.osgi.version.range>
+        <org.codehaus.jettison.version>1.3.7</org.codehaus.jettison.version>
     </properties>
 
 </project>
