--- a/components/org.wso2.carbon.identity.oidcpoc/pom.xml
+++ b/components/org.wso2.carbon.identity.oidcpoc/pom.xml
@@ -52,6 +52,11 @@
             <groupId>org.wso2.orbit.org.apache.oltu.oauth2</groupId>
             <artifactId>oltu</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.orbit.com.nimbusds</groupId>
+            <artifactId>nimbus-jose-jwt</artifactId>
+            <version>2.26.1.wso2v3</version>
+        </dependency>
     </dependencies>
 
     <build>
