--- a/features/org.wso2.carbon.identity.oauth.feature/pom.xml
+++ b/features/org.wso2.carbon.identity.oauth.feature/pom.xml
@@ -68,7 +68,7 @@
                         </goals>
                         <configuration>
                             <id>org.wso2.carbon.identity.oauth</id>
-                            <propertiesFile>../../etc/feature.properties</propertiesFile>
+                            <propertiesFile>../etc/feature.properties</propertiesFile>
                             <includedFeatures>
                                 <includedFeatureDef>
                                     org.wso2.carbon.identity:org.wso2.carbon.identity.oauth.server.feature
