--- a/components/org.wso2.carbon.identity.oauth.dcr/pom.xml
+++ b/components/org.wso2.carbon.identity.oauth.dcr/pom.xml
@@ -22,7 +22,7 @@
         <groupId>org.wso2.carbon.identity</groupId>
         <artifactId>identity-inbound-auth-oauth</artifactId>
         <relativePath>../../pom.xml</relativePath>
-        <version>5.0.9-SNAPSHOT</version>
+        <version>5.1.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -53,7 +53,6 @@
                             org.wso2.carbon.identity.oauth.dcr.*;version="${carbon.identity.package.export.version}"
                         </Export-Package>
                         <Import-Package>
-                            javax.servlet.*; version="${imp.pkg.version.javax.servlet}",
                             org.apache.commons.logging,
                             org.json,
                             org.json.simple,
@@ -66,8 +65,6 @@
                             org.wso2.carbon.identity.application.mgt,
                             org.wso2.carbon.identity.application.mgt.stub,
                             org.wso2.carbon.identity.base,
-                            org.wso2.carbon.identity.oauth,
-                            org.wso2.carbon.identity.oauth.dto,
                             org.wso2.carbon.identity.sso.saml.admin,
                             org.wso2.carbon.identity.sso.saml.dto,
                             org.wso2.carbon.registry.api,
@@ -75,6 +72,7 @@
                             org.wso2.carbon.utils.multitenancy,
                             org.wso2.carbon.identity.application.authentication.framework.*,
                         </Import-Package>
+                        <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
             </plugin>
@@ -82,11 +80,11 @@
     </build>
 
     <dependencies>
-        <dependency>
+        <!--dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>jsr311-api</artifactId>
             <scope>provided</scope>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
