--- a/pom.xml
+++ b/pom.xml
@@ -137,9 +137,9 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.codehaus.jettison</groupId>
-                <artifactId>jettison</artifactId>
-                <version>${org.codehaus.jettison.version}</version>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${com.google.code.gson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -254,7 +254,7 @@
         <opensaml.version>2.6.4</opensaml.version>
         <opensaml2.wso2.version>2.6.4.wso2v2</opensaml2.wso2.version>
         <opensaml2.wso2.osgi.version.range>[2.6.0,3.0.0)</opensaml2.wso2.osgi.version.range>
-        <org.codehaus.jettison.version>1.3.7</org.codehaus.jettison.version>
+        <com.google.code.gson.version>2.6.2</com.google.code.gson.version>
     </properties>
 
 </project>
