--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.wso2.carbon.identity</groupId>
         <artifactId>identity-extension-parent</artifactId>
-        <version>5.1.1-SNAPSHOT</version>
+        <version>5.1.1-m2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -266,7 +266,6 @@
         <nimbusds.version>2.26.1.wso2v3</nimbusds.version>
         <nimbusds.osgi.version.range>[2.26.1,3.0.0)</nimbusds.osgi.version.range>
         <json-smart.version>1.3</json-smart.version>
-        <identity.inbount.openid.version>5.0.9-SNAPSHOT</identity.inbount.openid.version>
         <cxf-bundle.wso2.version>2.6.1.wso2v2</cxf-bundle.wso2.version>
         <thetransactioncompany.cors-filter.wso2.version>1.7.0.wso2v1</thetransactioncompany.cors-filter.wso2.version>
         <thetransactioncompany.utils.wso2.version>1.9.0.wso2v1</thetransactioncompany.utils.wso2.version>
