--- a/components/org.wso2.carbon.identity.oidc.dcr/pom.xml
+++ b/components/org.wso2.carbon.identity.oidc.dcr/pom.xml
@@ -54,27 +54,36 @@
                             org.wso2.carbon.identity.oidc.dcr.*;version="${carbon.identity.package.export.version}"
                         </Export-Package>
                         <Import-Package>
-                            org.apache.commons.logging,
+                            org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
+                            org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
+
+                            org.apache.commons.logging; version="${commons-logging.osgi.version.range}",
+
                             org.json,
                             org.json.simple,
                             org.json.simple.parser,
-                            org.osgi.framework,
-                            org.osgi.service.component,
-                            org.wso2.carbon.context,
-                            org.wso2.carbon.identity.application.common,
-                            org.wso2.carbon.identity.application.common.model,
-                            org.wso2.carbon.identity.application.mgt,
-                            org.wso2.carbon.identity.application.mgt.stub,
-                            org.wso2.carbon.identity.base,
-                            org.wso2.carbon.identity.sso.saml.admin,
-                            org.wso2.carbon.identity.sso.saml.dto,
-                            org.wso2.carbon.registry.api,
-                            org.wso2.carbon.registry.core,
-                            org.wso2.carbon.utils.multitenancy,
-                            org.wso2.carbon.identity.oauth.dcr,
-                            org.wso2.carbon.identity.application.authentication.framework.*,
+
+                            org.wso2.carbon.context; version="${carbon.kernel.package.import.version.range}",
+                            org.wso2.carbon.utils.multitenancy;version="${carbon.kernel.package.import.version.range}",
+                            org.wso2.carbon.registry.api;version="${carbon.kernel.registry.imp.pkg.version}",
+                            org.wso2.carbon.registry.core.*;version="${carbon.kernel.registry.imp.pkg.version}",
+
+                            org.wso2.carbon.identity.base; version="${carbon.identity.package.import.version.range}",
+
+                            org.wso2.carbon.identity.application.common;
+                            version="${carbon.identity.package.import.version.range}",
+                            org.wso2.carbon.identity.application.common.model;
+                            version="${carbon.identity.package.import.version.range}",
+
+                            org.wso2.carbon.identity.application.mgt;
+                            version="${carbon.identity.package.import.version.range}",
+
+                            org.wso2.carbon.identity.application.authentication.framework.*;
+                            version="${carbon.identity.package.import.version.range}",
+
+                            org.wso2.carbon.identity.oauth.dcr;
+                            version="${identity.inbound.auth.oauth.package.import.version.range}"
                         </Import-Package>
-                        <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
             </plugin>
