--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
                 <version>${opensaml2.wso2.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.wso2.orbit.joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda.wso2.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.thetransactioncompany.wso2</groupId>
                 <artifactId>java-property-utils</artifactId>
                 <version>${thetransactioncompany.utils.wso2.version}</version>
@@ -274,8 +279,11 @@
         <json.wso2.version.range>[3.0.0.wso2v1, 4.0.0)</json.wso2.version.range>
         <google.guava.wso2.version>12.0.0.wso2v1</google.guava.wso2.version>
         <opensaml.version>2.6.4</opensaml.version>
-        <opensaml2.wso2.version>2.6.4.wso2v2</opensaml2.wso2.version>
+        <opensaml2.wso2.version>2.6.4.wso2v3</opensaml2.wso2.version>
         <opensaml2.wso2.osgi.version.range>[2.6.0,3.0.0)</opensaml2.wso2.osgi.version.range>
+        <joda.version>2.8.2</joda.version>
+        <joda.wso2.version>2.8.2.wso2v1</joda.wso2.version>
+        <joda.wso2.osgi.version.range>[2.8.2,3.0.0)</joda.wso2.osgi.version.range>
         <com.google.code.gson.version>2.6.2</com.google.code.gson.version>
         <json-simple.version>1.1.wso2v1</json-simple.version>
     </properties>
