--- a/components/org.wso2.carbon.identity.oauth.endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/org.wso2.carbon.identity.oauth.endpoint/src/main/webapp/WEB-INF/web.xml
@@ -23,26 +23,18 @@
     <display-name>OAuth2 Endpoints</display-name>
 
     <filter>
-        <filter-name>CRLFPreventionFilter</filter-name>
-        <filter-class>org.wso2.carbon.ui.filters.CRLFPreventionFilter</filter-class>
+        <filter-name>HttpHeaderSecurityFilter</filter-name>
+        <filter-class>org.apache.catalina.filters.HttpHeaderSecurityFilter</filter-class>
+        <init-param>
+            <param-name>hstsEnabled</param-name>
+            <param-value>false</param-value>
+        </init-param>
     </filter>
 
     <filter-mapping>
-        <filter-name>CRLFPreventionFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <filter-name>HttpHeaderSecurityFilter</filter-name>
+        <url-pattern>*</url-pattern>
     </filter-mapping>
-
-    <filter>
-        <filter-name>CSRFPreventionFilter</filter-name>
-        <filter-class>org.wso2.carbon.ui.filters.CSRFPreventionFilter</filter-class>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>CSRFPreventionFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-
 
     <servlet>
         <servlet-name>OAuth2Endpoints</servlet-name>
