--- a/components/org.wso2.carbon.identity.oauth.ui/pom.xml
+++ b/components/org.wso2.carbon.identity.oauth.ui/pom.xml
@@ -107,21 +107,19 @@
                             org.osgi.service.http; version="${osgi.service.http.imp.pkg.version.range}",
 
                             org.wso2.carbon.identity.oauth.stub.*;
-                            version="${carbon.identity.package.import.version.range}",
+                            version="${identity.inbound.auth.oauth.imp.pkg.version.range}",
                             org.wso2.carbon.identity.oauth.common.*;
-                            version="${carbon.identity.package.import.version.range}",
+                            version="${identity.inbound.auth.oauth.imp.pkg.version.range}",
 
                             org.wso2.carbon.base.api; version="${carbon.base.imp.pkg.version.range}",
-                            org.wso2.carbon.ui; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.ui.util; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.utils; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.identity.core.util.*;
-                            version="${carbon.identity.package.import.version.range}"
+                            org.wso2.carbon.ui; version="${carbon.kernel.imp.pkg.version.range}",
+                            org.wso2.carbon.ui.util; version="${carbon.kernel.imp.pkg.version.range}",
+                            org.wso2.carbon.utils; version="${carbon.kernel.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.core.util.*;version="${carbon.identity.framework.imp.pkg.version.range}"
                         </Import-Package>
                         <Export-Package>
                             !org.wso2.carbon.identity.oauth.ui.internal,
-                            org.wso2.carbon.identity.oauth.ui.*;
-                            version="${carbon.identity.package.export.version}"
+                            org.wso2.carbon.identity.oauth.ui.*;version="${identity.inbound.auth.oauth.imp.pkg.version.range}"
                         </Export-Package>
                         <Carbon-Component>UIBundle</Carbon-Component>
                     </instructions>
