--- a/components/org.wso2.carbon.identity.oauth.common/pom.xml
+++ b/components/org.wso2.carbon.identity.oauth.common/pom.xml
@@ -57,10 +57,10 @@
                         </Bundle-SymbolicName>
                         <Import-Package>
                             org.apache.oltu.oauth2.common.validators; version="${oltu.package.import.version.range}",
-                            org.wso2.carbon.identity.base; version="${carbon.identity.package.import.version.range}"
+                            org.wso2.carbon.identity.base; version="${carbon.identity.framework.imp.pkg.version.range}"
                         </Import-Package>
                         <Export-Package>
-                            org.wso2.carbon.identity.oauth.common.*;version="${carbon.identity.package.export.version}"
+                            org.wso2.carbon.identity.oauth.common.*;version="${identity.inbound.auth.oauth.exp.pkg.version}"
                         </Export-Package>
                     </instructions>
                 </configuration>
