--- a/components/org.wso2.carbon.identity.oauth/pom.xml
+++ b/components/org.wso2.carbon.identity.oauth/pom.xml
@@ -155,11 +155,9 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-scr-plugin</artifactId>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
@@ -212,8 +210,6 @@
                             waffle.util; version="${waffle.imp.pkg.version.range}",
                             waffle.windows.auth; version="${waffle.imp.pkg.version.range}",
                             waffle.windows.auth.impl; version="${waffle.imp.pkg.version.range}",
-                            <!--com.sun.jna.platform.win32;-->
-                            <!--com.sun.jna.platform.win32; version="${waffle-jna.imp.pkg.version.range}",-->
 
                             org.joda.time;version="${joda.wso2.osgi.version.range}",
                             org.opensaml.*; version="${opensaml2.wso2.osgi.version.range}",
@@ -221,35 +217,30 @@
                             org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
                             org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
 
-                            org.wso2.carbon.idp.mgt; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.base; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.core.*; version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.application.mgt;
-                            version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.application.common.*;
-                            version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.application.authentication.framework.*;
-                            version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.user.store.configuration.*;
-                            version="${carbon.identity.package.import.version.range}",
+                            org.wso2.carbon.idp.mgt; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.base; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.core.*; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.application.mgt; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.application.common.*;version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.application.authentication.framework.*;version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.user.store.configuration.*;version="${carbon.identity.framework.imp.pkg.version.range}",
 
                             org.wso2.carbon.base; version="${carbon.base.imp.pkg.version.range}",
-                            org.wso2.carbon.registry.api;version="${carbon.kernel.registry.imp.pkg.version}",
-                            org.wso2.carbon.registry.core.*;version="${carbon.kernel.registry.imp.pkg.version}",
+                            org.wso2.carbon.registry.api;version="${carbon.kernel.registry.imp.pkg.version.range}",
+                            org.wso2.carbon.registry.core.*;version="${carbon.kernel.registry.imp.pkg.version.range}",
                             org.wso2.carbon.user.api; version="${carbon.user.api.imp.pkg.version.range}",
 
-                            org.wso2.carbon.utils;version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.context; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.core.*;version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.user.core.*;version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.utils.multitenancy;version="${carbon.kernel.package.import.version.range}",
+                            org.wso2.carbon.utils;version="${carbon.kernel.imp.pkg.version.range}",
+                            org.wso2.carbon.context; version="${carbon.kernel.imp.pkg.version.range}",
+                            org.wso2.carbon.core.*;version="${carbon.kernel.imp.pkg.version.range}",
+                            org.wso2.carbon.user.core.*;version="${carbon.kernel.imp.pkg.version.range}",
+                            org.wso2.carbon.utils.multitenancy;version="${carbon.kernel.imp.pkg.version.range}",
                         </Import-Package>
                         <Export-Package>
                             !org.wso2.carbon.identity.oauth.internal,
-                            org.wso2.carbon.identity.oauth.*; version="${carbon.identity.package.export.version}",
-                            org.wso2.carbon.identity.oauth2.*; version="${carbon.identity.package.export.version}",
-                            org.wso2.carbon.identity.openidconnect.*;
-                            version="${carbon.identity.package.export.version}",
+                            org.wso2.carbon.identity.oauth.*; version="${identity.inbound.auth.oauth.exp.pkg.version}",
+                            org.wso2.carbon.identity.oauth2.*; version="${identity.inbound.auth.oauth.exp.pkg.version}",
+                            org.wso2.carbon.identity.openidconnect.*;version="${identity.inbound.auth.oauth.exp.pkg.version}",
                         </Export-Package>
                         <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
