--- a/components/org.wso2.carbon.identity.oidc.dcr/pom.xml
+++ b/components/org.wso2.carbon.identity.oidc.dcr/pom.xml
@@ -33,69 +33,7 @@
     <packaging>bundle</packaging>
     <url>http://wso2.org</url>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-scr-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
-                <extensions>true</extensions>
-                <configuration>
-                    <instructions>
-                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-                        <Bundle-Name>${project.artifactId}</Bundle-Name>
-                        <Bundle-Description>Dynamic Client Registration Bundle</Bundle-Description>
-                        <Private-Package>org.wso2.carbon.identity.oidc.dcr.internal</Private-Package>
-                        <Export-Package>
-                            !org.wso2.carbon.identity.oidc.dcr.internal,
-                            org.wso2.carbon.identity.oidc.dcr.*;version="${carbon.identity.package.export.version}"
-                        </Export-Package>
-                        <Import-Package>
-                            org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
-                            org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
-
-                            org.apache.commons.logging; version="${commons-logging.osgi.version.range}",
-
-                            org.json,
-                            org.json.simple,
-                            org.json.simple.parser,
-
-                            org.wso2.carbon.context; version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.utils.multitenancy;version="${carbon.kernel.package.import.version.range}",
-                            org.wso2.carbon.registry.api;version="${carbon.kernel.registry.imp.pkg.version}",
-                            org.wso2.carbon.registry.core.*;version="${carbon.kernel.registry.imp.pkg.version}",
-
-                            org.wso2.carbon.identity.base; version="${carbon.identity.package.import.version.range}",
-
-                            org.wso2.carbon.identity.application.common;
-                            version="${carbon.identity.package.import.version.range}",
-                            org.wso2.carbon.identity.application.common.model;
-                            version="${carbon.identity.package.import.version.range}",
-
-                            org.wso2.carbon.identity.application.mgt;
-                            version="${carbon.identity.package.import.version.range}",
-
-                            org.wso2.carbon.identity.application.authentication.framework.*;
-                            version="${carbon.identity.package.import.version.range}",
-
-                            org.wso2.carbon.identity.oauth.dcr;
-                            version="${identity.inbound.auth.oauth.package.import.version.range}"
-                        </Import-Package>
-                    </instructions>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
-        <!--dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>jsr311-api</artifactId>
-            <scope>provided</scope>
-        </dependency-->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -117,13 +55,11 @@
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.oauth</artifactId>
-            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.oauth.dcr</artifactId>
-            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -132,5 +68,55 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-scr-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Bundle-Name>${project.artifactId}</Bundle-Name>
+                        <Bundle-Description>Dynamic Client Registration Bundle</Bundle-Description>
+                        <Private-Package>org.wso2.carbon.identity.oidc.dcr.internal</Private-Package>
+                        <Import-Package>
+                            org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
+                            org.osgi.service.component; version="${osgi.service.component.imp.pkg.version.range}",
+
+                            org.apache.commons.logging; version="${commons-logging.osgi.version.range}",
+
+                            org.json,
+                            org.json.simple,
+                            org.json.simple.parser,
+
+                            org.wso2.carbon.context; version="${carbon.kernel.imp.pkg.version.range}",
+                            org.wso2.carbon.utils.multitenancy;version="${carbon.kernel.imp.pkg.version.range}",
+                            org.wso2.carbon.registry.api;version="${carbon.kernel.registry.imp.pkg.version.range}",
+                            org.wso2.carbon.registry.core.*;version="${carbon.kernel.registry.imp.pkg.version.range}",
+
+                            org.wso2.carbon.identity.base; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.application.common; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.application.common.model; version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.application.mgt;version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.application.authentication.framework.*;version="${carbon.identity.framework.imp.pkg.version.range}",
+
+                            org.wso2.carbon.identity.oauth.dcr;version="${identity.inbound.auth.oauth.imp.pkg.version.range}"
+                        </Import-Package>
+                        <Export-Package>
+                            !org.wso2.carbon.identity.oidc.dcr.internal,
+                            org.wso2.carbon.identity.oidc.dcr.*;version="${identity.inbound.auth.oauth.exp.pkg.version}"
+                        </Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
