--- a/features/org.wso2.carbon.identity.oauth.server.feature/pom.xml
+++ b/features/org.wso2.carbon.identity.oauth.server.feature/pom.xml
@@ -135,6 +135,7 @@
                                         <include>oauth2.war</include>
                                         <include>p2.inf</include>
                                         <include>build.properties</include>
+                                        <include>oidc-scope-config.xml</include>
                                     </includes>
                                 </resource>
                             </resources>
